--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
-.card{
+/*
+.container{
     background-color: rgba(224, 183, 243, .7);
     border-radius: 10px;
     position: relative;
@@ -6,29 +7,35 @@
     height: 280px;
     margin: 20px;
     padding: 10px;
-    &:hover{
-        transform: scale(0.8);
+    box-shadow: 0 0 10px darkgray;
+    &:hover {
+        transform: scale(0.9);
     } 
 }
 
-.delete {
+.container button {
     width: 20px;
     position: absolute;
     right: 10px;
     top: 10px;
+    &:hover {
+        box-shadow: 0 2px 2px whitesmoke;
+        background-color: crimson;
+    }
 }
 
-.info{
+.dataContainer {
     color: rgb(34, 34, 34);
-    padding: 5px;  
+    padding: 5px;
+    text-align: center;  
 }
 
-.info h2{
+.dataContainer h2{
     margin: 2px;
     font-size: 15px;
 }
 
-.info h4 {
+.dataContainer h4 {
     margin: 2px;
     font-size: 10px;
 }
@@ -36,5 +43,6 @@
 .image{
     width: 130px;
     border-radius: 20%;
-    margin: 15px;
+    margin-top: 15px;
 }
+*/
