--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,4 @@
+/*
 .nav {
     position: absolute;
     width: 100%;
@@ -5,3 +6,4 @@
     background-color: rgb(165, 126, 201);
     display: flex;
 }
+*/
