--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+/*
 .App{
   width: 100%;
-  background-color: #53abee;
+  /* background-color: #53abee; */
+  /*
   display: flex;
   flex-direction: column;
   text-align: center;
+
 }
+*/
