--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,13 +1,18 @@
+
 .nav {
+    display: flex;
+    background-color: darkslateblue;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    /*
     margin-top: 0;
     margin-left: 0;
-    position: absolute;
     width: 100%;
-    height: 5rem;
-    background-color: rgb(165, 126, 201);
-    display: flex;
+    */
 }
+
 .active{
     color: springgreen;
     font-size: 24px;
 }
+
