--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,20 +1,20 @@
-/*
-.container {
-    margin: auto;
-    padding-top: 20px;
-    padding-bottom: 15px;
-      
+.searchContainer {
+    display: flex;
+    margin: auto;      
 }
 
-.input {
+.searchContainer input {
     border-radius: 5px;
-    height: 25px;
-    margin-right: 2px;
+    height: 20px;
+    background-color: antiquewhite;
+    padding: 3px;
+    font-size: 12px;
+    margin-right: 5px;
     border: none;
 
 }
 
-.btn {
+.searchContainer button {
     border-radius: 3px;
     height: 25px;
     color: whitesmoke;
