--- a/Client (front)/src/components/Cards/Cards.css
+++ b/Client (front)/src/components/Cards/Cards.css
@@ -2,7 +2,7 @@
 .cardsContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     /*
     width: 100%;
     position: relative;
