--- a/Client (front)/src/index.css
+++ b/Client (front)/src/index.css
@@ -1,7 +1,7 @@
 
 body {
   /* background-color: #53abee; */
-  background-image: url('../public/img/onjail.jpg');
+  background-image: url('img/onjail.jpg');
   background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
