--- a/Client (front)/src/components/Nav/Nav.css
+++ b/Client (front)/src/components/Nav/Nav.css
@@ -1,9 +1,11 @@
 
 .nav {
     display: flex;
+    justify-content: space-between;
     background-color: darkslateblue;
     padding-top: 20px;
     padding-bottom: 15px;
+    text-decoration: none;
     /*
     margin-top: 0;
     margin-left: 0;
@@ -13,6 +15,7 @@
 
 .active{
     color: springgreen;
-    font-size: 24px;
+    font-size: 20px;
+    text-decoration: none;
 }
 
