--- a/Client (front)/src/components/Form/Form.css
+++ b/Client (front)/src/components/Form/Form.css
@@ -1,5 +1,10 @@
 .formulario {
-    margin-top: 100px;
+    margin: 20%;
+    background-color: rgb(196, 147, 241);
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
 }
 
 
