--- a/Client (front)/src/components/Nav/Nav.css
+++ b/Client (front)/src/components/Nav/Nav.css
@@ -1,6 +1,7 @@
 
 .nav {
     display: flex;
+    justify-content: space-between;
     background-color: darkslateblue;
     padding-top: 20px;
     padding-bottom: 15px;
@@ -9,10 +10,12 @@
     margin-left: 0;
     width: 100%;
     */
+    color: white;
+    font-size: 20px;
 }
 
 .active{
     color: springgreen;
-    font-size: 24px;
+    font-size: 22px;
 }
 
